plugins {
    id 'war'
    id 'org.gretty' version '3.1.1'
    id 'application'
}

application{
    mainClass = 'rpm.Main'
}


group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}


war {

    sourceCompatibility = JavaVersion.VERSION_11


    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}


tasks.register('stage') {
    dependsOn 'build'
    dependsOn 'clean'
}
build.mustRunAfter clean

dependencies {

    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'org.postgresql:postgresql:42.7.3'

}

test {
    useJUnitPlatform()
}
